--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <body>
         <h1>mc Recipes</h1>
         <img src="https://www.allrecipes.com/thmb/7uC01CPGnY1SADl6WXqwiTyCR6w=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/why-are-mcdonalds-onions-so-good-4_3-b6fe44336ebe4c95addfc413553890f8.png"width="500" height="300">
-        <a href="recipes/mcroyal.html"><h3>mc royal</a>
-            <a href="recipes/mcnuggets.html"><h4>mc nuggets</a>
+        <ul>
+        <li><a href="recipes/mcroyal.html">mc royal</a></li>           
+        <li><a href="recipes/mcnuggets.html">mc nuggets</a></li>
+        </ul>
                 
 
     </body>
